test/vm/fails/invalid_binary_hex.js
binary_hex("0xjlklklLKTY");